// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot InputBuilder With default 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem"
      >
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        />
        <input
          class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
        />
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem"
    >
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      />
      <input
        class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
      />
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot InputBuilder With default with disabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border_1px_solid_{colors.body.border} bg_body.readonly text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem opacity_0.6 pointer-events_none"
      >
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        />
        <input
          class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
          disabled=""
        />
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border_1px_solid_{colors.body.border} bg_body.readonly text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem opacity_0.6 pointer-events_none"
    >
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      />
      <input
        class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
        disabled=""
      />
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot InputBuilder With default with endIcon 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem"
      >
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        />
        <input
          class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
        />
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
            />
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem"
    >
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      />
      <input
        class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
      />
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
          />
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot InputBuilder With default with readOnly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border_1px_solid_{colors.body.border} bg_body.readonly text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem pointer-events_none"
      >
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        />
        <input
          class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
          readonly=""
        />
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border_1px_solid_{colors.body.border} bg_body.readonly text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem pointer-events_none"
    >
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      />
      <input
        class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
        readonly=""
      />
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot InputBuilder With default with startIcon 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem"
      >
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
            />
          </svg>
        </div>
        <input
          class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
        />
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem"
    >
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
          />
        </svg>
      </div>
      <input
        class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
      />
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot InputBuilder With size=lg, width=lg, placeholder='Input some word' 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_16rem h_2.6rem w_16rem"
      >
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_3xl"
        />
        <input
          class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_lg"
          placeholder="Input some world"
        />
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_3xl"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_16rem h_2.6rem w_16rem"
    >
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_3xl"
      />
      <input
        class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_lg"
        placeholder="Input some world"
      />
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_3xl"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot InputBuilder With size=md, width=md, placeholder='Input some word' 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem"
      >
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        />
        <input
          class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
          placeholder="Input some world"
        />
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_14rem h_2.4rem w_14rem"
    >
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      />
      <input
        class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_md"
        placeholder="Input some world"
      />
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_2xl"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot InputBuilder With size=sm, width=sm, placeholder='Input some word' 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_12rem h_2.2rem w_12rem"
      >
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_xl"
        />
        <input
          class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_sm"
          placeholder="Input some world"
        />
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_xl"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_12rem h_2.2rem w_12rem"
    >
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_xl"
      />
      <input
        class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_sm"
        placeholder="Input some world"
      />
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_xl"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot InputBuilder With size=xl, width=xl, placeholder='Input some word' 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_16rem h_2.8rem w_18rem"
      >
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_4xl"
        />
        <input
          class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_xl"
          placeholder="Input some world"
        />
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_4xl"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_16rem h_2.8rem w_18rem"
    >
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_4xl"
      />
      <input
        class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_xl"
        placeholder="Input some world"
      />
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_4xl"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot InputBuilder With size=xs, width=xs, placeholder='Input some word' 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_10rem h_2rem w_10rem"
      >
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_lg"
        />
        <input
          class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_xs"
          placeholder="Input some world"
        />
        <div
          class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_lg"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border_1px_solid_{colors.body.border} bg_body.bg text_body.text d_flex justify_center items_center focusWithin:ring_2px_solid_black focusWithin:osDark:ring_2px_solid_white rounded_xs min-w_10rem h_2rem w_10rem"
    >
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_lg"
      />
      <input
        class="border_none bg_body.bg text_body.text ring_none disabled:opacity_0.6 disabled:bg_body.readonly readOnly:pointer-events_none readOnly:bg_body.readonly d_block w_100% fs_xs"
        placeholder="Input some world"
      />
      <div
        class="h_100% px_2 d_flex justify_center items_center text_inputIcon fs_lg"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
